--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
+*::selection {
+    color:#1d52a3;
+    background-color: #eaff8d;
+}
+
 body {
     background-color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .head-wrapper {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     background-color: #307cc2;
     background-image: linear-gradient(180deg, rgba(0, 36, 70, 0.65) 0%, rgba(90, 169, 202,0) 71%, rgba(126,223,255,0.5) 100%), url("../images/bg-grid-blue.png");
@@ -14,12 +20,141 @@ body {
     background-repeat: repeat repeat;
     box-shadow: inset 0px -1px 0px 0px rgba(0, 75, 139, 0.8), inset 0px -2px 0px 0px rgba(172, 233, 255, 0.77);
     width: 100%;
+    min-width: 1200px;
     min-height: 300px;
 }
 
 .header-block {
-    background-color: rgba(190, 240, 84, 0.18);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    box-sizing: border-box;
+    padding: 36px;
     max-width: 1200px;
+    min-width: 1200px;
+    min-height: 200px;
+}
+
+.nav-block {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-content: center;
+    margin-bottom: 40px;
+    background-color: rgba(51, 255, 109, 0.37);
+}
+
+ul.menu-block {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-content: center;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+    min-height: 60px;    
+}
+
+li.menu-item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-content: center;
+}
+
+li.menu-item > a {
+    display: flex;
+    align-items: center;
+    padding: 0px 24px;
+    font-size: 1.25rem;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.person-block {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 24px 24px;
+    min-height: 200px;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+figure.person-photo {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    margin: 0px;
+    min-width: 390px;
+    height: 390px;
+    background-color: #ffffff;
+    box-shadow: 1px 1px 2px rgba(0, 28, 73, 0.329);
+}
+
+aside.person-info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+    max-width: 600px;
+    min-width: 300px;
+    min-height: 300px;
+}
+
+h1.person-name {
+    display: flex;
+    margin: 8px 0px 0px 0px;
+    color: #ffffff;
+    font-size: 3rem;
+    text-transform: uppercase;
+}
+
+h2.person-position {
+    display: flex;
+    margin: 8px 0px 16px 0px;
+    color: #5bf2c2;
+    font-size: 2.4rem;
+    font-weight: 600;
+    letter-spacing: 0.2rem;
+}
+
+.person-info-divider {
+    width: 90%;
+    height: 6px;
+    background-color: #4fa3f2;
+}
+
+
+
+.header-main-divider {
+    display: block;
+    background-color: transparent;
+    background-image: linear-gradient(0deg, rgba(90, 90, 90, .0) 0%, rgba(90, 90, 90,0.25) 70%, rgba(10, 10, 10, .35) 100%);
+    min-height: 40px;
+    width: 100%;
+}
+
+.main-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #ffffff;
+    background-image: url("../images/bg-grid-white.png");
+    background-position: top center;
+    background-repeat: repeat repeat;
+    box-shadow: inset 0px -1px 0px 0px rgba(0, 75, 139, 0.8), inset 0px -2px 0px 0px rgba(172, 233, 255, 0.77);
+    width: 100%;
     min-width: 1200px;
     min-height: 300px;
 }
