--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
     background-color: #eaff8d;
 }
 
+h1::selection, h2::selection {
+    color:#ffffff;
+    background-color: #eb587c;
+}
+
 body {
     background-color: white;
     font-family: 'Montserrat', sans-serif;
@@ -180,3 +185,53 @@ li.github {background: url("../images/icon-github.png") left center no-repeat tr
     min-width: 1200px;
     min-height: 300px;
 }
+
+main {
+    display: flex;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    max-width: 1200px;
+    min-width: 1200px;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: center;
+    width: 100%;
+    margin: 10px 0px;
+}
+
+.section-title-block {
+    display: flex;
+    box-sizing: border-box;
+    min-width: 100%;
+}
+
+h2.section-title {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-self: flex-start;
+    min-width: auto;
+    max-width: 100%;    
+    padding-left: 80px;
+    color: #11d199;
+    font-size: 2.3rem;
+    text-transform: uppercase;
+    border-bottom: 7px solid #3694eb;
+}
+
+.section-description {
+    display: flex;
+    max-width: 800px;
+    margin-bottom: 40px;
+    font-size: 1.4rem;
+    line-height: 1.3;
+    color: #626262;
+}
+
+
+
