--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ pre.bg-darkblue > code.hljs {
     align-items: center;
     background-color: #307cc2;
     background-image: linear-gradient(0deg, rgba(0, 36, 70, 0.25) 0%, rgba(0, 36, 70, 0.55) 100%), url("../images/bg-grid-blue.png");
-    background-position: top center;
+    background-position: center center;
     background-repeat: repeat repeat;
     box-shadow: inset 0px 1px 0px 0px rgba(0, 75, 139, 0.8), inset 0px 2px 0px 0px rgba(172, 233, 255, 0.77);
     width: 100%;
